# marvin

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  deps.dot  marvin.cabal  package.yaml  slackbot-framework.cabal  stack-docker.yaml  stack.yaml
app/: Main.hs  Main.mustache
etc/: IntegrationSpec.hs  run-integrations.sh
etc/travis/: lts-8-stack.yaml  new-stack.yaml  old-stack.yaml
example/: Main.hs
initializer/: Main.hs
marvin-example/: example.cfg  marvin-example.cabal  stack.yaml
marvin-example/app/: Main.hs  Script1.hs
preprocessor/: ExternalScripts.hs  Main.hs
resources/initializer/: Main.hs.mustache  MyScript.hs.mustache  bot.cabal.mustache  config.cfg.mustache  package.yaml.mustache
src/: Marvin.hs  Util.hs
src/Framework/: SlackBot.hs
src/Framework/SlackBot/: Internal.hs  Logging.hs  Prelude.hs  Server.hs  Types.hs
src/Marvin/: Adapter.hs  Handler.hs  Internal.hs  Logging.hs  Mutable.hs  Prelude.hs  Regex.hs  Run.hs  Server.hs  Types.hs
src/Marvin/Adapter/: FacebookMessenger.hs  IRC.hs  Shell.hs  Slack.hs  Telegram.hs
src/Marvin/Adapter/Slack/: Common.hs  EventsAPI.hs  Internal.hs  RTM.hs  Types.hs
src/Marvin/Adapter/Slack/Internal/: Common.hs  Types.hs
src/Marvin/Adapter/Telegram/: Common.hs  Internal.hs  Poll.hs  Push.hs
src/Marvin/Adapter/Telegram/Internal/: Common.hs
src/Marvin/Internal/: LensClasses.hs  Types.hs  Values.hs
src/Marvin/Util/: Config.hs  HTTP.hs  JSON.hs  Logging.hs  Mutable.hs  Random.hs  Regex.hs
test/: IntegrationSpec.hs  Spec.hs
test/integration/: LICENSE  config.cfg  marvin-integration.cabal  package.yaml  stack-docker.yaml  stack.yaml
test/integration/app/: Main.hs  Script1.hs
test/integration/old-api/: Script1.hs
test/integration/shell/: Main.hs  Script1.hs
test/integration/slack/: Script1.hs
test/resources/: stack.yaml
