name:                marvin
version:             0.0.2
synopsis:            A modular bot for slack
description:         Please see README.md
homepage:            https://github.com/JustusAdam/marvin#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
extra-source-files:  README.md
                   , preprocessor/Main.mustache
data-dir:            resources
data-files:          initializer/*.hs.mustache
                     initializer/config.cfg.mustache
                     initializer/bot.cabal.mustache
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Marvin
                     , Marvin.Prelude
                     , Marvin.Types
                     , Marvin.Run
                     , Marvin.Util.Mutable
                     , Marvin.Util.Regex
                     , Marvin.Util.Random
                     , Marvin.Util.Logging
                     , Marvin.Util.JSON
                     , Marvin.Util.HTTP
                     , Marvin.Adapter
                     , Marvin.Adapter.Slack
  other-modules:       Marvin.Internal
                     , Marvin.Internal.Types
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , mtl
                     , lens
                     , pcre-light
                     , vector
                     , optparse-generic
                     , configurator
                     , template-haskell
                     , bytestring
                     , async
                     , hslogger
                     , text-format
                     , websockets
                     , network-uri
                     , wuss
                     , random
                     , hashable
                     , text
                     , mtl
                     , unordered-containers
                     , mono-traversable
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

executable marvin-pp
  hs-source-dirs:      preprocessor
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mustache
                     , directory
                     , filepath
                     , marvin
                     , configurator
                     , optparse-applicative
                     , bytestring
                     , mono-traversable
                     , text
                     , aeson
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

executable marvin-init
  hs-source-dirs:      initializer
  main-is:             Main.hs
  other-modules:       Paths_marvin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mustache
                     , directory
                     , filepath
                     , optparse-applicative
                     , mono-traversable
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

-- test-suite slackbot-framework-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , marvin
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--   default-extensions:  OverloadedStrings
--                      , TypeFamilies
--                      , MultiParamTypeClasses
--                      , TupleSections
--                      , GADTs

source-repository head
  type:     git
  location: https://github.com/JustusAdam/marvin
