name:                marvin
version:             0.0.6
synopsis:            A modular chat bot
description:         The proper documentation is on readthedocs: https://marvin.readthedocs.io
homepage:            https://marvin.readthedocs.io
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
extra-source-files:  README.md
                   , preprocessor/Main.mustache
data-dir:            resources
data-files:          initializer/*.hs.mustache
                     initializer/config.cfg.mustache
                     initializer/bot.cabal.mustache
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Marvin
                     , Marvin.Prelude
                     , Marvin.Types
                     , Marvin.Run
                     , Marvin.Util.Mutable
                     , Marvin.Util.Regex
                     , Marvin.Util.Random
                     , Marvin.Util.JSON
                     , Marvin.Util.HTTP
                     , Marvin.Adapter
                     , Marvin.Adapter.Shell
                     , Marvin.Adapter.Slack
                     , Marvin.Adapter.Telegram
                     , Marvin.Internal
                     , Marvin.Internal.Types
  other-modules:       Util
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , mtl
                     , lens
                     , text-icu
                     , vector
                     , optparse-applicative
                     , configurator
                     , bytestring
                     , async
                     , monad-logger
                     , websockets
                     , network-uri
                     , wuss
                     , random
                     , hashable
                     , text
                     , unordered-containers
                     , stm
                     , marvin-interpolate > 0.4
                     , lifted-base
                     , lifted-async
                     , wai
                     , warp
                     , haskeline
                     , monad-loops
                     , mono-traversable
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs
                     , TemplateHaskell
                     , QuasiQuotes

executable marvin-pp
  hs-source-dirs:      preprocessor
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mustache
                     , directory
                     , filepath
                     , marvin
                     , configurator
                     , optparse-applicative
                     , bytestring
                     , mono-traversable
                     , text
                     , aeson
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

executable marvin-init
  hs-source-dirs:      initializer
  main-is:             Main.hs
  other-modules:       Paths_marvin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mustache
                     , directory
                     , filepath
                     , optparse-applicative
                     , mono-traversable
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

-- test-suite slackbot-framework-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , marvin
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--   default-extensions:  OverloadedStrings
--                      , TypeFamilies
--                      , MultiParamTypeClasses
--                      , TupleSections
--                      , GADTs

source-repository head
  type:     git
  location: https://github.com/JustusAdam/marvin
