name:                marvin
version:             0.2.5
synopsis:            A framework for modular, portable chat bots.
description:         A framework for writing portable chat bots. Inspired by hubot.
                     .
                     The best way to get started with this library is with the documentation on readthedocs: <https://marvin.readthedocs.io>
homepage:            https://marvin.readthedocs.io
bug-reports:         https://github.com/JustusAdam/marvin/issues
license:             BSD3
license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
copyright:           © 2016, 2017 Justus Adam
category:            Development
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , preprocessor/Main.mustache
data-dir:            resources
data-files:          initializer/*.hs.mustache
                     initializer/config.cfg.mustache
                     initializer/bot.cabal.mustache
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Marvin
                     , Marvin.Prelude
                     , Marvin.Types
                     , Marvin.Run
                     , Marvin.Util.Mutable
                     , Marvin.Util.Regex
                     , Marvin.Util.Random
                     , Marvin.Util.JSON
                     , Marvin.Util.HTTP
                     , Marvin.Adapter
                     , Marvin.Adapter.Shell
                     , Marvin.Adapter.IRC
                     , Marvin.Adapter.Slack.RTM
                     , Marvin.Adapter.Slack.EventsAPI
                     , Marvin.Adapter.Telegram.Push
                     , Marvin.Adapter.Telegram.Poll
  other-modules:       Util
                     , Marvin.Internal
                     , Marvin.Internal.Types
                     , Marvin.Internal.Values
                     , Marvin.Adapter.Slack.Types
                     , Marvin.Adapter.Slack.Common
                     , Marvin.Adapter.Telegram.Common
  build-depends:       base >= 4.7 && < 5
                     , wreq >= 0.4 && < 0.6
                     , aeson >= 0.11 && < 1.3
                     , mtl >= 2.2 && < 3
                     , lens >= 4 && < 5
                     , text-icu >= 0.6 && < 0.8
                     , vector >= 0.11 && < 1
                     , configurator >= 0.3
                     , bytestring >= 0.10
                     , monad-logger >= 0.3
                     , websockets >= 0.9
                     , network-uri
                     , wuss >=1.0
                     , random >= 1.0
                     , hashable >= 1.0
                     , text >= 1.0
                     , unordered-containers >= 0.2
                     , stm >= 2.0
                     , marvin-interpolate >= 1.0
                     , lifted-base >= 0.2
                     , lifted-async >= 0.8
                     , wai >= 3 && < 4
                     , warp >= 3 && < 4
                     , warp-tls >= 3 && < 4
                     , haskeline >= 0.7 && < 1
                     , monad-loops >= 0.4
                     , time >= 1 && < 2
                     , transformers-base >= 0.4 && < 0.5
                     , monad-control >= 1 && < 2
                     , deepseq >= 1 && < 2
                     , http-types >= 0.8 && < 1.0
                     , http-client >= 0.4 && < 0.6
                     , http-client-tls >= 0.2 && < 0.4
                     , optparse-applicative >= 0.11 && < 1
                     , transformers >= 0.4
                     , conduit >= 1.2
                     , irc-conduit >= 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , LambdaCase
                     , GADTs
                     , TemplateHaskell
                     , QuasiQuotes

executable marvin-pp
  hs-source-dirs:      preprocessor
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , mustache >= 2.0
                     , directory >= 1.2
                     , filepath >= 1.4
                     , marvin
                     , configurator >= 0.3
                     , optparse-applicative >= 0.11 && < 1
                     , bytestring >= 0.10
                     , text >= 1.0
                     , aeson >= 0.11 && < 1.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

executable marvin-init
  hs-source-dirs:      initializer
  main-is:             Main.hs
  other-modules:       Paths_marvin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , mustache >= 2.0
                     , directory >= 1.2
                     , filepath >= 1.4
                     , optparse-applicative >= 0.11 && < 1
                     , text >= 1.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

test-suite marvin-unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , marvin
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

source-repository head
  type:     git
  location: https://github.com/JustusAdam/marvin
