name:                marvin-integration
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/JustusAdam/marvin#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable marvin-integration
  hs-source-dirs:      slack
  main-is:             Main.hs
  other-modules:       Script1
                     , Paths_marvin_integration
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marvin
                     , text
                     , directory
                     , filepath
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs

executable marvin-shell
  hs-source-dirs:      shell
  main-is:             Main.hs
  other-modules:       Script1
                     , Paths_marvin_integration
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marvin
                     , text
                     , directory
                     , filepath
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , TupleSections
                     , GADTs
